# django-resurrected

./: .editorconfig  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: main.yaml
examples/test_project/test_app/: apps.py  models.py
examples/test_project/test_app/migrations/: 0001_initial.py
examples/test_project/test_project/: settings.py
src/django_resurrected/: collector.py  managers.py  models.py  utils.py
tests/: conftest.py  test_managers.py  test_models.py
