[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-resurrected"
version = "0.1.0"
requires-python = ">=3.8"
authors = [
    { name = "Krzysztof Czopkiewicz", email = "krzysiek951@gmail.com" },
]
maintainers = [
    { name = "Krzysztof Czopkiewicz", email = "krzysiek951@gmail.com" }
]
description = ""
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = [
    "recovery",
    "ressurect",
    "restore",
    "retention",
    "soft-delete",
    "softdelete",
    "trash",
    "undelete",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python"
]
dependencies = [
    "Django >= 4.2",
]

[project.optional-dependencies]
dev = [
    "freezegun",
    "model_bakery",
    "pytest",
    "pytest-django",
    "ruff",
]

[project.urls]
Repository = "https://github.com/krzysiek951/django-resurrected"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = ["--import-mode=importlib"]
DJANGO_SETTINGS_MODULE = "examples.test_project.test_project.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]

[tool.ruff]
extend-exclude = [
    "*/migrations/*",
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.mccabe]
max-complexity = 10
